tests/snapshots/cli_snapshots__accounts_list.snap
---
source: tests/cli_snapshots.rs
expression: out
---
╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│ Account                                                                                                              │
╞══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╡
│ iCloud                                                                                                               │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
