tests/snapshots/cli_snapshots__backup_files.snap
---
source: tests/cli_snapshots.rs
assertion_line: 144
expression: files.join("\n")
---
Personal/Alpha-n1/contents.html
Personal/Alpha-n1/contents.md
Personal/Alpha-n1/metadata.json
Personal/Archive/Beta-n2/contents.html
Personal/Archive/Beta-n2/contents.md
Personal/Archive/Beta-n2/metadata.json
Personal/Archive/Gamma-n3/contents.html
Personal/Archive/Gamma-n3/contents.md
Personal/Archive/Gamma-n3/metadata.json
