tests/snapshots/cli_snapshots__folders_delete_requires_yes.snap
---
source: tests/cli_snapshots.rs
assertion_line: 100
expression: out
---
command failed: refusing to delete without --yes
