tests/snapshots/cli_snapshots__folders_list.snap
---
source: tests/cli_snapshots.rs
expression: out
---
╭───────────────────────────────────────────────────────────────┬──────────────────────────────────────────────────────╮
│ Folder                                                        ┆ Id                                                   │
╞═══════════════════════════════════════════════════════════════╪══════════════════════════════════════════════════════╡
│ Personal                                                      ┆ f_personal                                           │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ Personal > Archive                                            ┆ f_archive                                            │
╰───────────────────────────────────────────────────────────────┴──────────────────────────────────────────────────────╯
