tests/snapshots/cli_snapshots__notes_delete_requires_yes.snap
---
source: tests/cli_snapshots.rs
assertion_line: 94
expression: out
---
command failed: refusing to delete without --yes
