tests/snapshots/cli_snapshots__notes_list.snap
---
source: tests/cli_snapshots.rs
expression: out
---
╭─────────────────────────────────┬────────────────────────────────────────────────┬───────────────────────────────────╮
│ Id                              ┆ Folder                                         ┆ Title                             │
╞═════════════════════════════════╪════════════════════════════════════════════════╪═══════════════════════════════════╡
│ n1                              ┆ Personal                                       ┆ Alpha                             │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ n2                              ┆ Personal > Archive                             ┆ Beta                              │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ n3                              ┆ Personal > Archive                             ┆ Gamma                             │
╰─────────────────────────────────┴────────────────────────────────────────────────┴───────────────────────────────────╯
