tests/snapshots/cli_snapshots__notes_list_folder.snap
---
source: tests/cli_snapshots.rs
expression: out
---
╭─────────────────────────────────┬────────────────────────────────────────────────┬───────────────────────────────────╮
│ Id                              ┆ Folder                                         ┆ Title                             │
╞═════════════════════════════════╪════════════════════════════════════════════════╪═══════════════════════════════════╡
│ n2                              ┆ Personal > Archive                             ┆ Beta                              │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ n3                              ┆ Personal > Archive                             ┆ Gamma                             │
╰─────────────────────────────────┴────────────────────────────────────────────────┴───────────────────────────────────╯
